testsuite/tests/ado/T16135.stderr
T16135.hs:11:18: error: [GHC-83865]
    • Couldn't match type ‘a0’ with ‘a’
      Expected: f a0
        Actual: f a
      ‘a’ is a rigid type variable bound by
        a pattern with constructor:
          MkT :: forall {k} (f :: k -> *) (a :: k). f a -> T f,
        in a pattern binding in
             a 'do' block
        at T16135.hs:10:5-10
    • In the first argument of ‘MkT’, namely ‘fa’
      In the second argument of ‘($)’, namely ‘MkT fa’
      In a stmt of a 'do' block: return $ MkT fa
    • Relevant bindings include fa :: f a (bound at T16135.hs:10:9)
